[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/dot.png" type="Texture" id=1]
[ext_resource path="res://assets/big_dot.png" type="Texture" id=2]
[ext_resource path="res://assets/mini_sword.png" type="Texture" id=3]
[ext_resource path="res://assets/mini_boss.png" type="Texture" id=4]
[ext_resource path="res://scenes/world_ui/world_ui.gd" type="Script" id=5]
[ext_resource path="res://assets/mini_player.png" type="Texture" id=6]
[ext_resource path="res://resources/themes/theme.tres" type="Theme" id=7]
[ext_resource path="res://assets/unit_purple.png" type="Texture" id=8]
[ext_resource path="res://assets/logo.png" type="Texture" id=9]
[ext_resource path="res://assets/unit_icon.png" type="Texture" id=10]
[ext_resource path="res://assets/sounds/SLOW DOWN SPEED UP_05.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/WHOOSH_ARM_SWING_01.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/WHOOSH_AIRY_FLUTTER_01.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/Collectibles_3.wav" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Progress:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 112, 160 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerIcon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 112, 96 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyIcon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 208, 96 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VS:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, 96 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Logo:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, 64 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DeathText:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Again:percent_visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DeathText:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 96 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Again:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 120 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Swoosh:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 8.5
tracks/0/type = "value"
tracks/0/path = NodePath("Progress:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 108, 300 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 7.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finish"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerIcon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.2 ),
"update": 0,
"values": [ Vector2( 128, -20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyIcon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 192, -20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VS:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, -20 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Logo:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.2 ),
"update": 0,
"values": [ Vector2( 160, -20 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DeathText:percent_visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 2.4, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.9, 1.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Again:percent_visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 5.4, 6.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("DeathText:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 7.4, 8.4 ),
"transitions": PoolRealArray( 1, 10, 1 ),
"update": 0,
"values": [ Vector2( 0, 96 ), Vector2( 0, 96 ), Vector2( 0, -20 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Again:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.7, 7.4, 8.4 ),
"transitions": PoolRealArray( 1, 10, 10, 1 ),
"update": 0,
"values": [ Vector2( 0, 300 ), Vector2( 0, 120 ), Vector2( 0, 120 ), Vector2( 0, 300 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Reverse:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 7.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 8.5
tracks/0/type = "value"
tracks/0/path = NodePath("Progress:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5.5, 6.5, 7.5, 8.5 ),
"transitions": PoolRealArray( 1, 0.1, 1, 10, 1 ),
"update": 0,
"values": [ Vector2( 108, 300 ), Vector2( 108, 300 ), Vector2( 108, 144 ), Vector2( 108, 144 ), Vector2( 108, 300 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 3.5, 4.5, 6.5, 7.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_music"
}, {
"args": [  ],
"method": "show_player_text"
}, {
"args": [  ],
"method": "show_enemy_text"
}, {
"args": [  ],
"method": "move_player"
}, {
"args": [  ],
"method": "finish"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerIcon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 7.5, 8.5 ),
"transitions": PoolRealArray( 0.2, 0.1, 1, 10, 0.2 ),
"update": 0,
"values": [ Vector2( 128, -20 ), Vector2( 128, -20 ), Vector2( 128, 112 ), Vector2( 128, 112 ), Vector2( 128, -20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyIcon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 3, 7.5, 8.5 ),
"transitions": PoolRealArray( 1, 0.1, 1, 10, 0.2 ),
"update": 0,
"values": [ Vector2( 192, -20 ), Vector2( 192, -20 ), Vector2( 192, 112 ), Vector2( 192, 112 ), Vector2( 192, -20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VS:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 2.5, 7.5, 8.5 ),
"transitions": PoolRealArray( 1, 0.1, 1, 10, 0.2 ),
"update": 0,
"values": [ Vector2( 160, -20 ), Vector2( 160, -20 ), Vector2( 160, 112 ), Vector2( 160, 112 ), Vector2( 160, -20 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Logo:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 7.5, 8.5 ),
"transitions": PoolRealArray( 0.1, 1, 10, 0.2 ),
"update": 0,
"values": [ Vector2( 160, -20 ), Vector2( 160, 80 ), Vector2( 160, 80 ), Vector2( 160, -20 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Whoosh:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.1, 1.6, 2.1, 8.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Swoosh:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 5.5, 8.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[node name="WorldUI" type="Node2D"]
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Progress" type="Node2D" parent="."]
position = Vector2( 112, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Progress"]
margin_left = 1.0
margin_right = 101.0
margin_bottom = 4.0
__meta__ = {
"_edit_group_": true
}

[node name="BigDot" type="TextureRect" parent="Progress/HBoxContainer"]
margin_right = 4.0
margin_bottom = 4.0
texture = ExtResource( 2 )

[node name="Dot" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 8.0
margin_right = 12.0
margin_bottom = 4.0
texture = ExtResource( 1 )

[node name="Dot2" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 16.0
margin_right = 20.0
margin_bottom = 4.0
texture = ExtResource( 1 )

[node name="Dot7" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 24.0
margin_right = 28.0
margin_bottom = 4.0
texture = ExtResource( 1 )

[node name="BigDot2" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 32.0
margin_right = 36.0
margin_bottom = 4.0
texture = ExtResource( 2 )

[node name="Dot3" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 40.0
margin_right = 44.0
margin_bottom = 4.0
texture = ExtResource( 1 )

[node name="Dot4" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 48.0
margin_right = 52.0
margin_bottom = 4.0
texture = ExtResource( 1 )

[node name="Dot8" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 56.0
margin_right = 60.0
margin_bottom = 4.0
texture = ExtResource( 1 )

[node name="BigDot3" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 64.0
margin_right = 68.0
margin_bottom = 4.0
texture = ExtResource( 2 )

[node name="Dot5" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 72.0
margin_right = 76.0
margin_bottom = 4.0
texture = ExtResource( 1 )

[node name="Dot6" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 80.0
margin_right = 84.0
margin_bottom = 4.0
texture = ExtResource( 1 )

[node name="Dot9" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 88.0
margin_right = 92.0
margin_bottom = 4.0
texture = ExtResource( 1 )

[node name="BigDot4" type="TextureRect" parent="Progress/HBoxContainer"]
margin_left = 96.0
margin_right = 100.0
margin_bottom = 4.0
texture = ExtResource( 2 )

[node name="Sword" type="Sprite" parent="Progress"]
position = Vector2( 3, -8 )
texture = ExtResource( 3 )

[node name="Sword2" type="Sprite" parent="Progress"]
position = Vector2( 67, -8 )
texture = ExtResource( 3 )

[node name="Sword3" type="Sprite" parent="Progress"]
position = Vector2( 35, -8 )
texture = ExtResource( 3 )

[node name="Boss" type="Sprite" parent="Progress"]
position = Vector2( 99, -7 )
texture = ExtResource( 4 )

[node name="Player" type="Sprite" parent="Progress"]
position = Vector2( 3, 2 )
texture = ExtResource( 6 )

[node name="World" type="Label" parent="Progress"]
visible = false
margin_top = -32.0
margin_right = 102.0
margin_bottom = -18.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.223529, 0.0352941, 0.278431, 1 )
text = "1"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/die = SubResource( 3 )
anims/show = SubResource( 2 )

[node name="PlayerIcon" type="Node2D" parent="."]
position = Vector2( 112, 96 )

[node name="BG" type="Sprite" parent="PlayerIcon"]
position = Vector2( 1, 1 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="PlayerIcon"]
modulate = Color( 0.427451, 0.501961, 0.980392, 1 )
texture = ExtResource( 10 )

[node name="VS" type="Node2D" parent="."]
position = Vector2( 160, 96 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="VS"]
margin_left = -16.0
margin_top = -8.0
margin_right = 16.0
margin_bottom = 6.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.223529, 0.0352941, 0.278431, 1 )
text = "vs"
align = 1
valign = 1

[node name="EnemyIcon" type="Node2D" parent="."]
position = Vector2( 208, 96 )

[node name="BG" type="Sprite" parent="EnemyIcon"]
position = Vector2( 1, 1 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="EnemyIcon"]
modulate = Color( 0.917647, 0.384314, 0.384314, 1 )
texture = ExtResource( 10 )

[node name="Question" type="Label" parent="EnemyIcon"]
visible = false
margin_left = -16.0
margin_top = -6.0
margin_right = 16.0
margin_bottom = 8.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.223529, 0.0352941, 0.278431, 1 )
text = "???"
align = 1
valign = 1

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 160, 64 )
texture = ExtResource( 9 )

[node name="DeathText" type="Label" parent="."]
margin_top = 96.0
margin_right = 320.0
margin_bottom = 120.0
rect_min_size = Vector2( 320, 24 )
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.223529, 0.0352941, 0.278431, 1 )
text = "all is square in love and war..."
align = 1
valign = 1
percent_visible = 0.0

[node name="Again" type="Label" parent="."]
margin_top = 120.0
margin_right = 320.0
margin_bottom = 144.0
rect_min_size = Vector2( 320, 24 )
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.223529, 0.0352941, 0.278431, 1 )
text = "again?"
align = 1
valign = 1
percent_visible = 0.0

[node name="Reverse" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -6.0

[node name="Whoosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -6.0

[node name="Swoosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -6.0

[node name="Bloop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -18.0
pitch_scale = 1.5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
